--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat May 31 2003  Vitezslav Samel <samel@mail.cz>
+	* configure.ac:
+	change version number to include _CVS suffix
+
 Mon May  5 2003  Vitezslav Samel <samel@mail.cz>
 	*** Release joe-2.9.8 ***
 
