--- a/TODO
+++ b/TODO
@@ -1,14 +1,81 @@
-Immediate things:
+Syntax highlighting:
 
  No. 1 requested new feature for joe: syntax highlighting.  I have termcap.c
  and scrn.c with color support.  I need to merge it in.  I still need a
  database for syntax highlighting.  Emacs re-colors after no activity.
 
+
+Support for more languages:
+
  Paragraph reformat mode for TeX files.
 
  ^G Matching for verilog begin ... end, html tags, etc.
 
+ Add .v, .pl, etc. file types to joerc
+
+ Reformat paragraph should reformat C function if we're editing C.
+
+
+File loading/storing:
+
+ Reload modified files
+
+ Lock files being edited
+  one person gets write lock
+
+ Save all modified
+
+ On save, should check if file on disk is newer
+
+ Should have switch buffers in current window as more fundamental joe key
+ sequence.
+
+ should ignore wordwrap when overtype mode is enabled.  they
+ interact very badly together.
+
+ joe a b c
+ windows are not in order a, b, c
+
+ Unnamed buffers should be in bufed list (was fixed in the lost joe 2.9)
+
+ Don't understand:  optionally break hardlinks on save?  what is "tla"?
+
+ Save all history buffers in .joestate file?
+
+ Use memory mapped files to fast load large files.  Have to not
+ count no. lines in each buffer on startup.
+
+
+Jmacs/Jstar/Jpico:
+
+ Jmacs: incremental search should wrap
+
+ Emulate other editors?  Brief, EDT?
+
+ Rectangle mode for emacs yank system
+
+ Overtype mode works for yank
+
+ Query save loop? for kill-emacs and compile
+
+ Emacs reload from file function? ^X ^V 
+ (it just works out if ^X ^V kills all instances of the buffer)
+
+ ESC args should work differently in emacs
+
+ nextword,nextword,prevword sequence 
+ doesn't work for marking next successive word at ends of lines
+
+ exiting options and i-search with ESC is not pretty
+ (it isn't in emacs either)
+
+
+Shell windows:
+
  Better environment settings for shell windows.
+
+
+Internationalization:
 
  Gettext: merge yes or no?  I need a non-english speaking
  person to tell how well this works.
@@ -17,14 +84,25 @@ Immediate things:
  
  Define what constitutes a word for ^X ^Z ^W ^O.
 
+
+Documentation:
+
  Update man page.
 
  Include documentation for joe hackers.  I wrote a lot of this
  some time, I need to find it.
 
- Add .v, .pl, etc. file types to joerc
+
+Prompts:
 
  Make tab completion more like bash?
+
+ Size of file selection window should be an option
+
+ HTML-style thing for option selection
+
+
+Terminal handling:
 
  Emit ESC c to reset terminal on startup?
  Don't use tabs by default?
@@ -32,103 +110,59 @@ Immediate things:
  Mode to prevent te, ti sequences.  I hate the restore previous
  screen contents on quit behavior.
 
- Expand math mode (hex, octal, math functions...)
-
- Interactive macros during file load are broken.  Think about multiple
- stack hack (otherwise template based C++ callbacks).
-
- File selection menu window should be more than one line.
-
- Should have switch buffers in current window as more fundamental joe key
- sequence.
-
  Look into clearing right-most column.
-
- ` and autoindent mode are a problem for drag and drop.
- any way we can distinguish normal typing from a drop?
-
- should ignore wordwrap when overtype mode is enabled.  they
- interact very badly together.
-
- joe a b c
- windows are not in order a, b, c
 
  joe should open tty earlier in startup sequence because ^Y
  is suspend character on sun.
 
- Don't understand:  optionally break hardlinks on save?  what is "tla"?
+
+Math mode:
+
+ Expand math mode (hex, octal, math functions...)
+
+
+Macros:
+
+ Interactive macros during file load are broken.  Think about multiple
+ stack hack (otherwise template based C++ callbacks).
+
+
+Mouse:
+
+ ` and autoindent mode are a problem for drag and drop.
+ any way we can distinguish normal typing from a drop?
+
+
+Keyboard:
 
  Ctrl-left arrow, etc. give codes in modern Lini- should somehow make
  use of these.
 
+
+Bugs:
+
  I've seen spell check lock up joe.
 
- Reopen files which have become newer.  Example given is
-   joe a.c b.c
-   ^K ^Z
-   cvs update
-   P a.c
-   P b.c
-   fg
-   oops joe is editing old files...
 
- Unnamed buffers should be in bufed list (was fixed in the lost joe 2.9)
+Regex:
 
-FEATURES
-=-=-=-=-
-	-=- syntax higlighting
-	-=- gettext (possibility of translate messages from joe)
-	-=- folding
-
-	from joe2.8
-	-=- picture mode
-	-=- brief emulation? EDT emulation?
-	-=- save editor state
-	-=- CR-LF mode for joe editing DOS files in linux?
-	-=- xedit and folding stuff
-		- with seperate valid-line database?
-		- display update algorithm will break
-	-=- hexadecimal edit mode
-	-=- fixed record length edit mode
-	-=- verticle windows
-		- difficult to get scrolling to work right
-
-PROGRAM REDeSIGN:
-=-=-=-=-=-=-=-=-=-=
-	-=- why to use list of help screens and array of help screens
-		when later is only array used ?
-	-=- prepare sources to use gettext
-	-=- add prototypes for functions
-	-=- clean sources
-	-=- add documentation
-
-PORTABILITY
-=-=-=-=-=-=
-	-=- WARNING: MSDOS compatibility can be broken by my changes
-		I try to use ANSI/ISO C but sometimes 
-		I have to use POSIX extentsions so if you want to 
-		have a DOS version, plz mail me your patches
-	-=- MSDOS
-		- how to give memory back during shell escapes?
-	-=- make identifier length significant in first 8 (6?) places 
-		for old C compilers
+ Perl compatible regex search.
 
 
-BuGS
-=-=-
-Emacs emulation improvements:
-	- Rectangle mode for emacs yank system
-	- Overtype mode works for yank
-	- Query save loop? for kill-emacs and compile
-	- Emacs reload from file function? ^X ^V 
-		(it just works out if ^X ^V kills all instances of the buffer)
-	- Bufed should display unnamed buffers
-	- ESC args should work differently in emacs
-	- nextword,nextword,prevword sequence 
-		doesn't work for marking next successive word at ends of lines
-	- exiting options and i-search with ESC is not pretty
-		(it isn't in emacs either)
-	- Allow either direct screen access or normal tty support 
-		for DOS version.
+Major new modes:
+
+ Hex edit mode
+
+ Fixed record length mode
+
+ Picture mode (can type past right column).
 
 
+Major code improvements:
+
+ Vertical windows
+
+
+Major new features:
+
+ Folding
