Fix lockup bug in UTF-8: hit down arrow on last line.  Bug was in pcol().
Start replacement of 'char *' with 'unsigned char *'.  I want to be able to
assign characters to integers and not get -1 (this finishes the conversion
to NO_MORE_DATA from MAXINT).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 Fri Apr  9 2004  Joe Allen <jhallen@world.std.com>
+	* b.c, b.h, bw.c, types.h:
+
+	Fix lockup bug with down arrow on last line (utf-8).
+
+	Type change: chars will be banned.  Unsigned char * and
+	int will be used for characters.
+
+Fri Apr  9 2004  Joe Allen <jhallen@world.std.com>
 	* Makefile.am, b.c, b.h, bw.c, help.c, main.c, menu.c, rc.c,
 	scrn.c, scrn.h, types.h, uedit.c, w.c, wcwidth.c:
 
