--- a/TODO
+++ b/TODO
@@ -98,6 +98,8 @@ Prompts:
  Tab character cycle through names like in vim
  ^D in vim shows whole directory
 
+ Sort should be column wide, not row wise.
+
  Size of file selection window should be an option
 
  HTML-style thing for option selection
@@ -106,10 +108,6 @@ Prompts:
 Terminal handling:
 
  Emit ESC c to reset terminal on startup?
- Don't use tabs by default?
-
- Mode to prevent te, ti sequences.  I hate the restore previous
- screen contents on quit behavior.
 
  Look into clearing right-most column.
 
