--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 Tue Apr 13 2004  Joe Allen <jhallen@world.std.com>
+
+	Moved syntax file to syntax/ subdirectory.  They
+	still don't get installed in a subdirectory :-(
+
+Tue Apr 13 2004  Joe Allen <jhallen@world.std.com>
 	* scrn.c, rc.c, joerc.in:
 
 	Added -assume_color global option.  Need to update
