--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Thu Apr 15 2004  Joe Allen <jhallen@world.std.com>
+	* bw.c, help.c, main.c, menu.c, rc.c, scrn.c, scrn.h,
+	syntax.c, syntax.h, uedit.c, w.c:
+
+	Fix syntax definition file loader so that you don't
+	get seg faults when you refer to a state which doesn't
+	exist.
+
+	Fix outatr() to work with non-UTF-8 character sets again.
+	Need to start thinking about iconv().
+
+	Mess with option strings to make ^T look nicer.
+
+	Got rid of yellow selection bar from ^T.
+
 Wed Apr 14 2004  Joe Allen <jhallen@world.std.com>
 	* b.c b.h macro.c main.c rc.c uedit.c uerror.c uformat.c utag.c
 	utils.c utils.h:
