--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 Fix for next release:
 
+  highlighting of files with utf-8 chars is broken
+
   update selinux patch
 
   perl highlighter
@@ -12,6 +14,7 @@ Fix for next release:
 
   different symbol for 'joe' directory
 
+  fix it so iconv() is properly referenced.
   replace iconv(). (include i18n file in joe).
     (which fixes our compiling problem)
 
