--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon May  3 2004  Joe Allen <jhallen@world.std.com>
+	* :
+
+	Clean up pass: use internal ctype function everywhere.
+
+
 Mon Mai  3 2004  Joe Allen <jhallen@world.std.com>
 	* utils.c, utils.h, utf8.c, syntax.c, configure.ac, Makefile.am,
 	charmap.c, charmap.h:
