--- a/TODO
+++ b/TODO
@@ -55,6 +55,7 @@ Save all history buffers and keyboard macros in ~/.joe_state file?
 Improvements for regular text
 -----------------------------
 mode where wordwrap wraps rest of paragraph?
+
 mode where all editing wraps rest of paragraph?
 
 Improvements for programming
@@ -96,61 +97,6 @@ xterm.  For mixed, you need tags to indicate direction.
 
 - Gettext?
 
-
---- we have converted from char to unsigned char, so normal characters are
-in the range 0 - 255 and EOF is -1 when assigned to an int.  In a UTF-8
-terminal we'll have 0 - MAXINT.  Unfortunately we used >=256 for X key
-sequences.  We need to change these to <-2 to not collide with UTF-8 chars.
-Yuck.  From uisrch.c:
-
-Detect control character and stop incremental search:
-
-	} else if (c >= 0 && c < 32 || c >= 256) {	/* c >= 256 means an X windows sequence like .ku */
-		/* Done when a control character is received */
-
-(but we will never get a key >=256: we should only get encoded utf-8
-sequence: perhaps all of this is ok).
-
-
-0xxx_xxxx	1	0x7F		7
-
-10xx_xxxx       error
-
-110x_xxxx	2	0x7FF		11
- 10xx_xxxx
-
-1110_xxxx	3	0xFFFF		16
- 10xx_xxxx
- 10xx_xxxx
-
-1111_0xxx	4	0x1FFFFF	21
- 10xx_xxxx
- 10xx_xxxx
- 10xx_xxxx
-
-1111_10xx	5	0x3FFFFFF	26
- 10xx_xxxx
- 10xx_xxxx
- 10xx_xxxx
- 10xx_xxxx
-
-1111_110x	6	0x7FFFFFFF	31
- 10xx_xxxx
- 10xx_xxxx
- 10xx_xxxx
- 10xx_xxxx
- 10xx_xxxx
-
-1111_111x	error
-
-
--- ý…………… --
--- ù………… --
--- ñ……… --
--- á…… --
--- Á… --
-
-
 Syntax Highlighting:
 --------------------
 
@@ -180,9 +126,6 @@ File loading/storing:
 
  Should have switch buffers in current window as more fundamental joe key
  sequence.
-
- joe a b c
- windows are not in order a, b, c
 
  Unnamed buffers should be in bufed list (was fixed in the lost joe 2.9)
 
@@ -231,18 +174,11 @@ Documentation:
 
 Prompts:
 
- Make tab completion more like bash?
-
-   - mode so that directories are listed, but you don't
-     go into menu mode.
-
-   - ^D brings up list (for tcsh users).
-
- Sort should be column wide, not row wise.
+ Sort should be column wise, not row wise.
 
  Size of file selection window should be an option
 
- HTML-style thing for option selection
+ HTML-style thing for option selection?
 
 
 Terminal handling:
