--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ Sun May  9 02:30:41 EDT 2004
 	* sh.jsf.in :
 
 	Improved shell script highlighter.
+	Fix spelling errors in joe.1.in
 
 Sat May  8 2004  Joe Allen <jhallen@world.std.com>
 	* usearch.c :
